osdc/ObjectCacher: fix off-by-one error in bh_write_commit()

Fixes: https://tracker.ceph.com/issues/22741
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
(cherry picked from commit cc4c6dcc2ffdc482f1915db569949e674691c372)